- Upgrade to GeoServer 1.7.3 - Move log files from 'log' to 'logs' directories - Upgrade Jetty - Put data folder for both GeoNetwork and GeoServer outside of the web folder - Modify installer to put docs under web/geonetwork - Modify GAST to prevent servlet renaming (incompatible with new Jetty and non-intuitive function)
git-svn-id: https://geonetwork.svn.sourceforge.net/svnroot/geonetwork/trunk@2821 ff403467-3f20-0410-99e5-ff581e626a08